Zadc_int.h

__declspec(dllimport) long  ZGetInterruptDAC(long typeDevice, long numberDSP, long *size);
// определить макс. возможный размер буфера при прерывании
__declspec(dllimport) long  ZGetMaxInterruptADC(long typeDevice, long numberDSP, long *size);
__declspec(dllimport) long  ZGetMaxInterruptDAC(long typeDevice, long numberDSP, long *size);
// установить размер буфера для перекачки при прерывании
__declspec(dllimport) long  ZSetInterruptADC(long typeDevice, long numberDSP, long size);
__declspec(dllimport) long  ZSetInterruptDAC(long typeDevice, long numberDSP, long size);
// определить установленный размер пакета данных DSP
__declspec(dllimport) long  ZGetSizePacketADC(long typeDevice, long numberDSP, long *size);
__declspec(dllimport) long  ZGetSizePacketDAC(long typeDevice, long numberDSP, long *size);
// определить макс. возможный размер пакета данных DSP
__declspec(dllimport) long  ZGetMaxSizePacketADC(long typeDevice, long numberDSP, long *size);
__declspec(dllimport) long  ZGetMaxSizePacketDAC(long typeDevice, long numberDSP, long *size);
// установить размер пакета данных DSP
__declspec(dllimport) long  ZSetSizePacketADC(long typeDevice, long numberDSP, long size);
__declspec(dllimport) long  ZSetSizePacketDAC(long typeDevice, long numberDSP, long size);
// определить установленное кол-во пакетов за одно прерывание
__declspec(dllimport) long  ZGetQuantityPacketsADC(long typeDevice, long numberDSP, long *size);
__declspec(dllimport) long  ZGetQuantityPacketsDAC(long typeDevice, long numberDSP, long *size);
// определить макс. возможное кол-во пакетов за одно прерывание
__declspec(dllimport) long  ZGetMaxQuantityPacketsADC(long typeDevice, long numberDSP, long *size);
__declspec(dllimport) long  ZGetMaxQuantityPacketsDAC(long typeDevice, long numberDSP, long *size);
// установить кол-во пакетов за одно прерывание
__declspec(dllimport) long  ZSetQuantityPacketsADC(long typeDevice, long numberDSP, long size);
__declspec(dllimport) long  ZSetQuantityPacketsDAC(long typeDevice, long numberDSP, long size);
// установить однократное или циклическое накопление в буфер ОЗУ ПК 
__declspec(dllimport) long  ZSetCycleSampleADC(long typeDevice, long numberDSP, long enable);
__declspec(dllimport) long  ZSetCycleSampleDAC(long typeDevice, long numberDSP, long enable);
// задать размер буфера АЦП в ОЗУ ПК
__declspec(dllimport) long  ZSetBufferSizeADC(long typeDevice, long numberDSP, long size);
__declspec(dllimport) long  ZSetBufferSizeDAC(long typeDevice, long numberDSP, long size);
// запросить буфер в ОЗУ ПК
__declspec(dllimport) long  ZGetBufferADC(long typeDevice, long numberDSP, void **buffer, long *size);
__declspec(dllimport) long  ZGetBufferDAC(long typeDevice, long numberDSP, void **buffer, long *size);
// освободить буфер в ОЗУ ПК
__declspec(dllimport) long  ZRemBufferADC(long typeDevice, long numberDSP, void **buffer);
__declspec(dllimport) long  ZRemBufferDAC(long typeDevice, long numberDSP, void **buffer);
// чтение указателя буфера в ОЗУ ПК
__declspec(dllimport) long  ZGetPointerADC(long typeDevice, long numberDSP, long *pointer);
__declspec(dllimport) long  ZGetPointerDAC(long typeDevice, long numberDSP, long *pointer);
// опрос количества включенных каналов
__declspec(dllimport) long  ZGetNumberInputADC(long typeDevice, long numberDSP, long *workChannels);
__declspec(dllimport) long  ZGetNumberOutputDAC(long typeDevice, long numberDSP, long *workChannels);
// опрос включен ли заданный канал
__declspec(dllimport) long  ZGetInputADC(long typeDevice, long numberDSP, long numberChannel, long *enable);
__declspec(dllimport) long  ZGetOutputDAC(long typeDevice, long numberDSP, long numberChannel, long *enable);
// включить/выключить заданный канал
__declspec(dllimport) long  ZSetInputADC(long typeDevice, long numberDSP, long numberChannel, long enable);
__declspec(dllimport) long  ZSetOutputDAC(long typeDevice, long numberDSP, long numberChannel, long enable);
// ------------- Функции для работы только с АЦП -------------
// получить оставшиеся данные АЦП
__declspec(dllimport) long  ZGetLastDataADC(long typeDevice, long numberDSP, long numberChannel, void *buffer, long size);
// прочитать коэф. усиления
__declspec(dllimport) long  ZGetAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double *amplify);
// прочитать коэф. усиления из списка возможных коэф. усиления
__declspec(dllimport) long  ZGetListAmplifyADC(long typeDevice, long numberDSP, long next, double *amplify);
// установить следующий коэф. усиления
__declspec(dllimport) long  ZSetNextAmplifyADC(long typeDevice, long numberDSP, long numberChannel, long next, double *amplify);
// установить коэф. усиления
__declspec(dllimport) long  ZSetAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double amplifyIn, double *amplifyOut);
// прочитать коэф. усиления ПУ8/10
__declspec(dllimport) long  ZGetPreAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double *amplify);
// прочитать коэф. усиления из списка возможных коэф. усиления ПУ8/10
__declspec(dllimport) long  ZGetListPreAmplifyADC(long typeDevice, long numberDSP, long next, double *amplify);
// установить следующий коэф. усиления ПУ8/10
__declspec(dllimport) long  ZSetNextPreAmplifyADC(long typeDevice, long numberDSP, long numberChannel, long next, double *amplify);
// установить коэф. усиления ПУ8/10
__declspec(dllimport) long  ZSetPreAmplifyADC(long typeDevice, long numberDSP, long numberChannel, double amplifyIn, double *amplifyOut);
// проверить поддерживается и подключен ли модуль HCP
__declspec(dllimport) long  ZFindHCPADC(long typeDevice, long numberDSP, long *present);
// прочитать о состоянии заданного канала модуля HCP
__declspec(dllimport) long  ZGetHCPADC(long typeDevice, long numberDSP, long numberChannel, long *enable);
// установить состояние заданного канала модуля HCP
__declspec(dllimport) long  ZSetHCPADC(long typeDevice, long numberDSP, long numberChannel, long enable);
// опрос дифференциального режима заданного канала для ввода 
__declspec(dllimport) long  ZGetInputDiffADC(long typeDevice, long numberDSP, long numberChannel, long *enable);
// установить-сбросить заданный канал для ввода в дифференциальный режим
__declspec(dllimport) long  ZSetInputDiffADC(long typeDevice, long numberDSP, long numberChannel, long enable);
// ------------- Функции для работы только с ЦАП -------------
// установить внешнюю (из памяти ПК) или внутреннюю (только из памяти DSP) загрузку в ЦАП
__declspec(dllimport) long  ZSetExtCycleDAC(long typeDevice, long numberDSP, long enable);
// опросить поддерживается ли программный аттенюатор
__declspec(dllimport) long  ZFindSoftAtten(long typeDevice, long numberDSP, long *present);
// прочитать коф. затухания аттенюатора
__declspec(dllimport) long  ZGetAttenDAC(long typeDevice, long numberDSP, long numberChannel, double *reduction);
// установить коф. затухания аттенюатора
__declspec(dllimport) long  ZSetAttenDAC(long typeDevice, long numberDSP, long numberChannel, double reductionIn, double *reductionOut);
// опрос максимального размера буфера ЦАП в DSP
__declspec(dllimport) long  ZGetMaxSizeBufferDSPDAC(long typeDevice, long numberDSP, long *size);
// опрос размера буфера ЦАП в DSP
__declspec(dllimport) long  ZGetSizeBufferDSPDAC(long typeDevice, long numberDSP, long *size);
// установить размер буфера ЦАП в DSP
__declspec(dllimport) long  ZSetSizeBufferDSPDAC(long typeDevice, long numberDSP, long size);