ZadcNet/NativeMethods.cs

        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetInterruptDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxInterruptADC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxInterruptDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetInterruptADC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetInterruptDAC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetSizePacketADC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetSizePacketDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxSizePacketADC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxSizePacketDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetSizePacketADC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetSizePacketDAC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetQuantityPacketsADC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetQuantityPacketsDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxQuantityPacketsADC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxQuantityPacketsDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetQuantityPacketsADC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetQuantityPacketsDAC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetCycleSampleADC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetCycleSampleDAC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetBufferSizeADC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetBufferSizeDAC(int typeDevice, int numberDSP, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetBufferADC(int typeDevice, int numberDSP, out IntPtr buffer,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetBufferDAC(int typeDevice, int numberDSP, out IntPtr buffer,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZRemBufferADC(int typeDevice, int numberDSP, ref IntPtr buffer);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZRemBufferDAC(int typeDevice, int numberDSP, ref IntPtr buffer);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetPointerADC(int typeDevice, int numberDSP,out int pointer);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetPointerDAC(int typeDevice, int numberDSP,out int pointer);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetNumberInputADC(int typeDevice, int numberDSP,out int workChannels);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetNumberOutputDAC(int typeDevice, int numberDSP,out int workChannels);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetInputADC(int typeDevice, int numberDSP, int numberChannel,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetOutputDAC(int typeDevice, int numberDSP, int numberChannel,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetInputADC(int typeDevice, int numberDSP, int numberChannel, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetOutputDAC(int typeDevice, int numberDSP, int numberChannel, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetLastDataADC(int typeDevice, int numberDSP, int numberChannel, IntPtr buffer, int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetAmplifyADC(int typeDevice, int numberDSP, int numberChannel,out double amplify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetListAmplifyADC(int typeDevice, int numberDSP, int next,out double amplify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetNextAmplifyADC(int typeDevice, int numberDSP, int numberChannel, int next,out double amplify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetAmplifyADC(int typeDevice, int numberDSP, int numberChannel, double amplifyIn,out double amplifyOut);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetPreAmplifyADC(int typeDevice, int numberDSP, int numberChannel,out double amplify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetListPreAmplifyADC(int typeDevice, int numberDSP, int next,out double amplify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetNextPreAmplifyADC(int typeDevice, int numberDSP, int numberChannel, int next,out double amplify);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetPreAmplifyADC(int typeDevice, int numberDSP, int numberChannel, double amplifyIn,out double amplifyOut);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZFindHCPADC(int typeDevice, int numberDSP,out int present);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetHCPADC(int typeDevice, int numberDSP, int numberChannel,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetHCPADC(int typeDevice, int numberDSP, int numberChannel, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetInputDiffADC(int typeDevice, int numberDSP, int numberChannel,out int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetInputDiffADC(int typeDevice, int numberDSP, int numberChannel, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetExtCycleDAC(int typeDevice, int numberDSP, int enable);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZFindSoftAtten(int typeDevice, int numberDSP,out int present);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetAttenDAC(int typeDevice, int numberDSP, int numberChannel,out double reduction);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetAttenDAC(int typeDevice, int numberDSP, int numberChannel, double reductionIn,out double reductionOut);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetMaxSizeBufferDSPDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZGetSizeBufferDSPDAC(int typeDevice, int numberDSP,out int size);
        [DllImport(dll_name, ExactSpelling = true)] internal static extern int ZSetSizeBufferDSPDAC(int typeDevice, int numberDSP, int size);

    }
}
